idf_component_register(
    SRCS
        "main.c"
        "system.c"
        "log_buffer.c"              # FIX: Behebt undefined reference zu log_buffer
        "lv_font_portfolio-6x8.c"   # FIX: Behebt undefined reference zu lv_font_portfolio_6x8
        "i2c_bitaxe.c"
        "nvs_config.c"
        "device_config.c"
        "adc.c"
        "display.c"
        "screen.c"
        "input.c"
        "work_queue.c"
        "../components/stratum/utils.c"
        "../components/stratum/mining.c"
        "./power/asic_reset.c"
        "./tasks/asic_result_task.c"
        "./tasks/stratum_task.c"
        "./tasks/create_jobs_task.c"
        "./tasks/power_management_task.c"
        "./tasks/fan_controller_task.c"
        "./tasks/statistics_task.c"
        "./tasks/hashrate_monitor_task.c"
        "./http_server/http_server.c"
        "./http_server/theme_api.c"
        "./http_server/websocket.c"
        "./self_test/self_test.c"
        "./thermal/thermal.c"
        "./thermal/PID.c"
        "./thermal/EMC2101.c"
        "./thermal/EMC2103.c"
        "./thermal/EMC2302.c"
        "./thermal/TMP1075.c"
        "./power/power.c"
        "./power/vcore.c"
        "./power/TPS546.c"
        "./power/DS4432U.c"
        "./power/INA260.c"
# ... Rest bleibt gleich
